# spectrum

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  README.md  TECH_DECISIONS.md  diagrams.md  prd.md  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  deps.py  errors.py
app/api/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py
app/api/routes/: __init__.py  articles.py  comparisons.py  docs.py  health.py
app/core/: __init__.py  errors.py
app/core/entities/: __init__.py  analysis.py  article.py  comparison.py
app/core/interfaces/: __init__.py  ai_provider.py  article_fetcher.py  cache.py  news_aggregator.py
app/core/use_cases/: __init__.py  analyze_article.py  compare_articles.py  find_related.py
app/schemas/: __init__.py  requests.py  responses.py
app/services/: __init__.py
app/services/aggregators/: __init__.py  gnews.py  newsapi.py
app/services/ai/: __init__.py  base.py  claude_provider.py  factory.py  groq_provider.py  openai_provider.py
app/services/cache/: __init__.py  cache_keys.py  memory_cache.py
app/services/fetchers/: __init__.py  web_scraper.py
docker/: Dockerfile  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
scripts/: run_dev.sh  test.sh
spectrum-web/: .dockerignore  .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
spectrum-web/src/: main.tsx
spectrum-web/src/app/: App.tsx
spectrum-web/src/app/providers/: index.tsx
spectrum-web/src/components/common/: ColdStartBanner.tsx  Disclaimer.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  SourceInfoPopover.tsx
spectrum-web/src/components/docs/: MarkdownViewer.tsx  MermaidDiagram.tsx  index.ts
spectrum-web/src/features/analysis/: index.ts
spectrum-web/src/features/analysis/components/: AnalysisCard.tsx  ArticleSummary.tsx  ScoreBreakdown.tsx  UrlInputForm.tsx
spectrum-web/src/features/analysis/hooks/: useAnalyzeArticle.ts
spectrum-web/src/features/comparison/: index.ts
spectrum-web/src/features/comparison/components/: ComparisonSpectrum.tsx  ComparisonSummary.tsx  ComparisonTray.tsx  ComparisonView.tsx  DetailLevelToggle.tsx  SideBySideView.tsx
spectrum-web/src/features/comparison/hooks/: useCompareArticles.ts
spectrum-web/src/features/related-articles/: index.ts
spectrum-web/src/features/related-articles/components/: RelatedArticleCard.tsx  RelatedArticlesList.tsx
spectrum-web/src/features/related-articles/hooks/: useFindRelated.ts
spectrum-web/src/features/spectrum/: index.ts
spectrum-web/src/features/spectrum/components/: ConfidenceIndicator.tsx  MiniSpectrum.tsx  SpectrumLabels.tsx  SpectrumMarker.tsx  SpectrumScale.tsx
spectrum-web/src/features/spectrum/utils/: spectrumColors.ts
spectrum-web/src/hooks/: useBackendStatus.ts  useSourceCompatibility.ts
spectrum-web/src/lib/api/: client.ts  errors.ts
spectrum-web/src/stores/: useComparisonStore.ts  useSearchHistory.ts
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/live/: __init__.py  test_sources.py
tests/unit/: test_cache.py  test_use_cases.py
